@@ -1,0 +1,1 @@
+<h1>categories layout component</h1>
