@@ -1,0 +1,12 @@
+import { Component } from "@angular/core";
+
+
+@Component({
+    selector: 'gp-categories-layout',
+    templateUrl: 'categories-layout.component.html',
+    styleUrls: ['categories-layout.component.html']
+})
+
+export class CategoriesLayoutComponent {
+
+}
