@@ -1,0 +1,11 @@
+import { Component } from "@angular/core";
+
+@Component({
+    selector: 'gp-sign-up-layout',
+    templateUrl: 'sign-up-layout.component.html',
+    styleUrls: ['sign-up-layout.component.css']
+})
+
+export class SignUpLayoutComponent {
+
+}
