@@ -1,0 +1,1 @@
+<h1>store layout component</h1>
