@@ -1,0 +1,12 @@
+import { Component } from "@angular/core";
+
+
+@Component({
+    selector: 'gp-store-layout',
+    templateUrl: 'store-layout.component.html',
+    styleUrls: ['store-layout.component.css']
+})
+
+export class StoreLayoutComponent {
+
+}
