@@ -34,3 +34,11 @@
 .gp__info-text {
   color: #96a2a6;
 }
+
+.gp__header-text {
+  font-size: 72px;
+}
+
+.gp__shopping-text {
+  color: #00a4ff;
+}
