@@ -1,5 +1,3 @@
-<gp-topnavbar class="vw-100">Loading...</gp-topnavbar>
-
 <!-- Could not figure out how to use bootstraps grid for this scenario -->
 <div class="gp__header-wrapper overflow-hidden">
     <div class="gp__header-left vh-100">
@@ -26,14 +24,23 @@
         </gp-info-card>
     </div>
 </div>
-<div class="d-flex flex-center p-0">
+<div class="d-flex flex-center">
     <p class="gp__info-text">*Not guaranteed; average delivery time.</p>
 </div>
 
+<div class="d-flex justify-content-center pt-4">
+    <p class="fw-bolder gp__header-text">Browse A Popular Category</p>
+</div>
+
+<div class="d-flex justify-content-center">
+    <a routerLink="categories" class="text-decoration-none gp__shopping-text fs-4 fw-bold">Start Shopping →</a>
+</div>
 <!-- Category Cards -->
 <div class="container-fluid d-flex flex-center my-3 flex-wrap">
     <div *ngFor="let catCard of catCards" class="m-3">
-        <gp-categorycard img={{catCard.img}} title={{catCard.title}}>Loading...</gp-categorycard>
+        <a routerLink="store" class="text-dark fw-bold text-decoration-none">
+            <gp-categorycard img={{catCard.img}} title={{catCard.title}}>Loading...</gp-categorycard>
+        </a>
     </div>
 </div>
 
