@@ -1,0 +1,13 @@
+import { Component } from "@angular/core";
+
+@Component({
+    selector: 'gp-user-login-layout',
+    templateUrl: 'user-login-layout.component.html',
+    styleUrls: ['user-login-layout.component.css']
+})
+
+export class UserLoginLayoutComponent {
+    
+
+
+}
