@@ -1,1 +1,3 @@
+<gp-topnavbar class="vw-100">Loading...</gp-topnavbar>
+
 <router-outlet></router-outlet>
